# treesitter-ls

./: .gitignore  AGENTS.md  ASYNC_BRIDGE_REMOVAL.md  CONTRIBUTING.md  Cargo.toml  E2E_TEST_CHECKLIST.md  Makefile  README.md  SPRINT_126_REVIEW.md  SPRINT_146_REVIEW.md  TESTING.md  TEST_SUMMARY.md  analyze_ast.rs  debug_lua_tree.rs  flake.nix  plan.md  renovate.json  review.md  run_tests.sh  scrum.ts  scrum.yaml  test_def.py  test_def_jump.lua  test_definition_jump.rs  test_rust_analysis.rs  test_semantic.sh  treesitter-ls.toml
.claude/commands/: tidy.md
.claude/rules/: lsp-spec.md
.github/workflows/: ci.yaml  release.yaml
.task/checksum/: build-debug
__ignored/: refactoring_plan.md
benches/: injection_benchmark.rs  injection_tokens.rs
docs/: README.md  deferred-work-tracking-checklist.md  e2e-testing-checklist.md  json-rpc-framing-checklist.md  sprint-132-summary.md  sprint-135-backlog-refinement.md  sprint-135-pbi-180-split-analysis.md
docs/adr/: 0000-template.md  0001-hierarchical-cli-subcommands.md  0002-filetype-detection-via-extension-mapping.md  0003-parser-compilation-fallback-strategy.md  0004-keep-tree-sitter-cli-dependency.md  0005-language-detection-fallback-chain.md  0006-language-server-bridge.md  0006-language-server-redirection.md  0007-language-server-bridge-virtual-document-model.md  0007-virtual-document-model.md  0008-language-server-bridge-request-strategies.md  0008-redirection-request-strategies.md  0009-async-bridge-architecture.md  0009-configuration-merging-strategy.md  0010-configuration-merging-strategy.md  0010-indexing-state-feedback.md  0010-wildcard-config-inheritance.md  0011-wildcard-config-inheritance.md  0012-lua-configuration-filter.md  0012-multi-ls-async-bridge-architecture.md  0013-async-bridge-connection.md  0013-async-io-layer.md  0013-implementation-phasing.md  0013-ls-bridge-implementation-phasing.md  0013-wasm-plugin-codeaction.md  0014-actor-based-message-ordering-amendment-001.md  0014-actor-based-message-ordering-amendment-002.md  0014-actor-based-message-ordering.md  0014-async-bridge-connection.md  0014-ls-bridge-async-connection.md  0014-treesitter-query-injection-grouping.md  (+19 more)
scripts/: minimal_init.lua  minimal_init.vim
src/: analysis.rs  config.rs  definition_resolution.rs  document.rs  error.rs  install.rs  language.rs  lib.rs  lsp.rs  query_predicates.rs  safe_library_loader.rs  simple_tests.rs  text.rs
test_queries/: markdown_injections.scm
tests/: behavior_tests.rs  definition_jump_edge_cases.rs  definition_resolution_tests.rs  e2e_bridge_completion.rs  e2e_bridge_fakeit.rs  e2e_bridge_init.rs  e2e_bridge_no_hang.rs  e2e_cancel_request.rs  e2e_completion.rs  e2e_definition.rs  e2e_didchange_forwarding.rs  e2e_didclose_forwarding.rs  e2e_hover.rs  e2e_incremental_sync.rs  e2e_lsp_didchange_updates_state.rs  e2e_lsp_init_supersede.rs  e2e_lsp_lua_color_presentation.rs  e2e_lsp_lua_completion.rs  e2e_lsp_lua_declaration.rs  e2e_lsp_lua_definition.rs  e2e_lsp_lua_diagnostic.rs  e2e_lsp_lua_document_color.rs  e2e_lsp_lua_document_highlight.rs  e2e_lsp_lua_document_link.rs  e2e_lsp_lua_document_symbol.rs  e2e_lsp_lua_hover.rs  e2e_lsp_lua_implementation.rs  e2e_lsp_lua_inlay_hint.rs  e2e_lsp_lua_moniker.rs  e2e_lsp_lua_references.rs  e2e_lsp_lua_rename.rs  e2e_lsp_lua_signature_help.rs  e2e_lsp_lua_type_definition.rs  e2e_lsp_protocol.rs  e2e_nonblocking_init.rs  e2e_notification.rs  e2e_references.rs  e2e_selection_range.rs  e2e_semantic.rs  e2e_semantic_tokens_refresh.rs  (+57 more)
(+296 files in other folders)
