[package]
name = "treesitter-ls"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "treesitter-ls"
path = "src/bin/main.rs"


[dependencies]
arc-swap = "1.7"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1.0"
dirs = "6.0"
libloading = "0.8.8"
line-index = "0.1"
log = "0.4"
lua-pattern = { version = "0.1.3", features = ["to-regex"] }
path-clean = "1.0"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.0"
thiserror = "2.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "io-std", "time"] }
toml = "0.8"
tower-lsp = "0.20.0"
tree-sitter = "0.25.6"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
tree-sitter-rust = "0.23"
tree-sitter-md = "0.3"
tree-sitter-yaml = "0.7"
streaming-iterator = "0.1"
