[package]
name = "treesitter-ls"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "treesitter-ls"
path = "src/bin/main.rs"


[dependencies]
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
dirs = "6"
env_logger = "0.11"
libloading = "0.8"
line-index = "0.1"
log = "0.4"
lua-pattern = { version = "0.1", features = ["to-regex"] }
path-clean = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "time"] }
toml = "0.8"
tower-lsp = "0.20"
tree-sitter = "0.26"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tree-sitter-rust = "0.23"
tree-sitter-md = "0.3"
tree-sitter-yaml = "0.7"
streaming-iterator = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "injection_tokens"
harness = false
