[package]
name = "kakehashi"
version = "0.0.12"
edition = "2024"

[[bin]]
name = "kakehashi"
path = "src/bin/main.rs"


[dependencies]
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
dirs = "6"
env_logger = "0.11"
libloading = "0.9"
line-index = "0.1"
log = "0.4"
lua-pattern = { version = "0.1", features = ["to-regex"] }
path-clean = "1"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
rust-lapper = "1.1"
serde = { version = "1", features = ["derive"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-onig"] }
serde_json = "1"
similar = "2.7"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "time", "process", "fs"] }
tokio-util = "0.7"
toml = "0.9"
tower = { version = "0.4", default-features = false }
tower-lsp-server = "0.23"
tree-sitter = "0.26"
tree-sitter-tsquery = "0.8"
ulid = "1"
url = "2"
percent-encoding = "2"
rayon = "1"

# Unix-only dependencies (signal handling)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process"] }

[features]
e2e = []
experimental = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tree-sitter-rust = "0.24"
tree-sitter-md = "0.5"
tree-sitter-yaml = "0.7"
streaming-iterator = "0.1"
criterion = { version = "0.8", features = ["html_reports"] }
filetime = "0.2"
insta = { version = "1", features = ["json"] }
serial_test = "3"
rstest = "0.26"
